# benchmark

./: .gitignore  .gitmodules  README.MD  bench_embeddings.ipynb  bench_tokenizers.ipynb  bench_tokenizers.py  pyproject.toml  ruff.toml
results/VoVanPhuc/sup-SimCSE-VietNamese-phobert-base/VoVanPhuc__sup-SimCSE-VietNamese-phobert-base/no_revision_available/: BelebeleRetrieval.json  MLQARetrieval.json  PublicHealthQA.json  VieQuADRetrieval.json  XQuADRetrieval.json  model_meta.json
tokenizer_wrappers/: spacy.py  underthesea.py  vncorenlp.py
tokenizers/: spacy.py  underthesea.py  vncorenlp.py
