[project]
name = "benchmark"
version = "0.1.0"
description = "This repo is used to benchmark embedding models and Vietnamese Tokenizers"
requires-python = ">=3.10"
dependencies = [
    "conllu>=6.0.0",
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "numpy<2",
    "pandas>=2.2.3",
    "py-vncorenlp>=0.1.4",
    "python-lsp-server[all]>=1.12.0",
    "pyvi>=0.1.1",
    "ruff>=0.8.6",
    "sacremoses>=0.1.1",
    "sentence-transformers==3.1.0",
    "underthesea>=6.8.4",
    "vi-core-news-lg",
]

[tool.uv.sources]
vi-core-news-lg = { url = "https://gitlab.com/trungtv/vi_spacy/-/raw/master/vi_core_news_lg/dist/vi_core_news_lg-0.0.1.tar.gz" }
